name:               blog-generator
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            BSD3
license-file:       LICENCE

executable site
  main-is:          Site.hs
  other-modules:    Posts
                  , Posts.Context
                  , People
                  , People.Common
                  , People.Context
                  , Util.Order
                  , Util.Nick
                  , Util.Pandoc
                  , Util.Index
                  , Util.Items
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , pandoc
                  , latex-formulae-image
                  , latex-formulae-pandoc
                  , latex-formulae-hakyll
                  , unordered-containers
                  , text
                  , aeson
                  , scientific
                  , filepath
                  , containers
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded -o dist-newstyle/site
  default-language: Haskell2010
